# githubDocGen

./: .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt
app/: main.py
app/analyzers/: general_scanner.py  js_analyzer.py  python_analyzer.py
app/api/: generate.py
app/generators/: mkdocs_generator.py  sphinx_generator.py
app/generators/templates/: architecture.md.j2  getting-started.md.j2  index.md.j2  installation.md.j2  mkdocs.yml.j2  module_page.md.j2  python_api_page.md.j2
app/services/: database_service.py  doc_writer.py  repo_fetcher.py  structure_builder.py
cli/: generate.py
doc_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
frontend/static/: index.html  script.js  style.css
output/docs-for-agents/docs_site/: mkdocs.yml
output/docs-for-agents/docs_site/docs/: architecture.md  getting-started.md  index.md  installation.md
output/docs-for-agents/docs_site/docs/modules/: ..md  app_components.md  app_components_chat.md  app_components_touch.md  app_components_upload.md  index.md  public.md  src_backend.md  src_cedar.md  src_cedar_components.md  src_cedar_components_CommandBar.md  src_cedar_components_chatMessages.md  src_cedar_components_inputs.md  src_cedar_components_spells.md  src_cedar_components_structural.md  src_cedar_components_text.md
output/hall-of-us-docs/docs_site/: mkdocs.yml
output/hall-of-us-docs/docs_site/docs/: architecture.md  getting-started.md  index.md  installation.md
output/hall-of-us-docs/docs_site/docs/modules/: app.md  app_components_filters.md  app_components_ui.md  (+14 more)
