[project]
name = "doc-generator"
version = "0.1.0"
description = "Generate documentation websites from GitHub URLs"
dependencies = [
    "GitPython==3.1.43",
    "PyGithub==2.2.0",
    "FastAPI==0.70.0",
    "Jinja2==3.1.3",
    "uvicorn==0.24.0.post1",
    "python-multipart==0.0.6",
    "rich==13.7.0",
    "pydantic==1.8.2",
    "mkdocs==1.5.3",
    "mkdocs-material==9.5.1",
    "python-lsp-server[yapf]==1.9.0",
    "pymongo==4.6.1",
    "dnspython==2.4.2",
    "openai==1.35.10",
]

[project.scripts]
docgen = "cli.generate:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "cli"]
